--- a/src/oscar/templates/oscar/customer/order/order_list.html
+++ b/src/oscar/templates/oscar/customer/order/order_list.html
@@ -16,15 +16,17 @@
 
 
 {% block breadcrumbs %}
-    <ul class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
-        </li>
-        <li class="breadcrumb-item">
-            <a href="{% url 'customer:summary' %}">{% trans 'Account' %}</a>
-        </li>
-        <li class="breadcrumb-item active">{% trans 'Order history' %}</li>
-    </ul>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="{% url 'customer:summary' %}">{% trans 'Account' %}</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans 'Order history' %}</li>
+        </ol>
+    </nav>
 {% endblock %}
 
 {% block tabcontent %}
