--- a/src/oscar/templates/oscar/customer/wishlists/wishlists_detail.html
+++ b/src/oscar/templates/oscar/customer/wishlists/wishlists_detail.html
@@ -4,20 +4,22 @@
 {% load widget_tweaks %}
 
 {% block breadcrumbs %}
-    <ul class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
-        </li>
-        <li class="breadcrumb-item">
-            <a href="{% url 'customer:summary' %}">{% trans 'Account' %}</a>
-        </li>
-        <li class="breadcrumb-item">
-            <a href="{% url 'customer:wishlists-list' %}">{% trans 'Wish Lists' %}</a>
-        </li>
-        <li class="breadcrumb-item active">
-            {{ wishlist.name }}
-        </li>
-    </ul>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="{% url 'customer:summary' %}">{% trans 'Account' %}</a>
+            </li>
+            <li class="breadcrumb-item">
+                <a href="{% url 'customer:wishlists-list' %}">{% trans 'Wish Lists' %}</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">
+                {{ wishlist.name }}
+            </li>
+        </ol>
+    </nav>
 {% endblock %}
 
 {% block tabcontent %}
