--- a/src/oscar/templates/oscar/dashboard/offers/step_form.html
+++ b/src/oscar/templates/oscar/dashboard/offers/step_form.html
@@ -27,7 +27,7 @@
             {% else %}
                 <li class="breadcrumb-item">{% trans "Create new offer" %}</li>
             {% endif %}
-            <li class="breadcrumb-item active">{{ title }}</li>
+            <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
         </ol>
     </nav>
 {% endblock %}
