--- a/src/oscar/templates/oscar/search/results.html
+++ b/src/oscar/templates/oscar/search/results.html
@@ -9,15 +9,17 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ul class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a href="{{ homepage_url }}">{% trans "Home" %}</a>
-        </li>
-        <li class="breadcrumb-item">
-            {% trans "Search" %}
-        </li>
-        <li class="breadcrumb-item active">"{{ query }}"</li>
-    </ul>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="{{ homepage_url }}">{% trans "Home" %}</a>
+            </li>
+            <li class="breadcrumb-item">
+                {% trans "Search" %}
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">"{{ query }}"</li>
+        </ol>
+    </nav>
 {% endblock %}
 
 {% block column_left %}
