--- a/src/oscar/templates/oscar/catalogue/reviews/review_list.html
+++ b/src/oscar/templates/oscar/catalogue/reviews/review_list.html
@@ -8,22 +8,24 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ul class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a href="{{ homepage_url }}">{% trans "Home" %}</a>
-        </li>
-        {% with category=product.categories.all.0 %}
-            {% for c in category.get_ancestors_and_self %}
-                <li class="breadcrumb-item">
-                    <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
-                </li>
-            {% endfor %}
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="{{ product.get_absolute_url }}">{{ product.title }}</a>
+                <a href="{{ homepage_url }}">{% trans "Home" %}</a>
             </li>
-        {% endwith %}
-        <li class="breadcrumb-item active">{% trans "All reviews" %}</li>
-    </ul>
+            {% with category=product.categories.all.0 %}
+                {% for c in category.get_ancestors_and_self %}
+                    <li class="breadcrumb-item">
+                        <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
+                    </li>
+                {% endfor %}
+                <li class="breadcrumb-item">
+                    <a href="{{ product.get_absolute_url }}">{{ product.title }}</a>
+                </li>
+            {% endwith %}
+            <li class="breadcrumb-item active" aria-current="page">{% trans "All reviews" %}</li>
+        </ol>
+    </nav>
 {% endblock %}
 
 {% block headertext %}
