--- a/src/oscar/templates/oscar/customer/login_registration.html
+++ b/src/oscar/templates/oscar/customer/login_registration.html
@@ -6,12 +6,14 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ul class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
-        </li>
-        <li class="breadcrumb-item active">{% trans 'Login or register' %}</li>
-    </ul>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans 'Login or register' %}</li>
+        </ol>
+    </nav>
 {% endblock %}
 
 {% block header %}{% endblock %}
