--- a/src/oscar/templates/oscar/customer/registration.html
+++ b/src/oscar/templates/oscar/customer/registration.html
@@ -7,12 +7,14 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ul class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
-        </li>
-        <li class="breadcrumb-item active">{% trans 'Register' %}</li>
-    </ul>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="{{ homepage_url }}">{% trans 'Home' %}</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans 'Register' %}</li>
+        </ol>
+    </nav>
 {% endblock %}
 
 {% block headertext %}
