--- a/src/oscar/templates/oscar/dashboard/catalogue/attribute_option_group_delete.html
+++ b/src/oscar/templates/oscar/dashboard/catalogue/attribute_option_group_delete.html
@@ -27,7 +27,7 @@
                 <li class="breadcrumb-item">
                     <a href="{% url 'dashboard:catalogue-attribute-option-group-list' %}">{% trans "Attribute Option Group" %}</a>
                 </li>
-                <li class="breadcrumb-item active">{% trans "Delete Attribute Option Group?" %}</li>
+                <li class="breadcrumb-item active" aria-current="page">{% trans "Delete Attribute Option Group?" %}</li>
             </ol>
         </nav>
     {% endif %}
