--- a/src/oscar/templates/oscar/dashboard/catalogue/category_form.html
+++ b/src/oscar/templates/oscar/dashboard/catalogue/category_form.html
@@ -14,7 +14,7 @@
             <li class="breadcrumb-item">
                 <a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a>
             </li>
-            <li class="breadcrumb-item" aria-current="page">
+            <li class="breadcrumb-item">
                 <a href="{% url 'dashboard:catalogue-category-list' %}">{% trans "Categories" %}</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
