--- a/src/oscar/templates/oscar/dashboard/catalogue/option_delete.html
+++ b/src/oscar/templates/oscar/dashboard/catalogue/option_delete.html
@@ -25,7 +25,7 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
                 <li class="breadcrumb-item"><a href="{% url 'dashboard:catalogue-option-list' %}">{% trans "Options" %}</a></li>
-                <li class="breadcrumb-item active">{% trans "Delete Option?" %}</li>
+                <li class="breadcrumb-item active" aria-current="page">{% trans "Delete Option?" %}</li>
             </ol>
         </nav>
     {% endif %}
