--- a/src/oscar/templates/oscar/dashboard/catalogue/option_form.html
+++ b/src/oscar/templates/oscar/dashboard/catalogue/option_form.html
@@ -27,7 +27,7 @@
             <li class="breadcrumb-item">
                 <a href="{% url 'dashboard:catalogue-option-list' %}">{% trans "Options" %}</a>
             </li>
-            <li class="breadcrumb-item active">{{ title }}</li>
+            <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
         </ol>
     </nav>
 {% endif %}
