--- a/src/oscar/templates/oscar/dashboard/catalogue/option_list.html
+++ b/src/oscar/templates/oscar/dashboard/catalogue/option_list.html
@@ -10,7 +10,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
-            <li class="breadcrumb-item active">{% trans "Options" %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Options" %}</li>
         </ol>
     </nav>
 {% endblock %}
