--- a/src/oscar/templates/oscar/dashboard/catalogue/product_class_delete.html
+++ b/src/oscar/templates/oscar/dashboard/catalogue/product_class_delete.html
@@ -8,7 +8,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:catalogue-class-list' %}">{% trans "Product type" %}</a></li>
-            <li class="breadcrumb-item active">{% trans "Delete product type?" %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Delete product type?" %}</li>
         </ol>
     </nav>
 {% endblock %}
