--- a/src/oscar/templates/oscar/dashboard/catalogue/product_delete.html
+++ b/src/oscar/templates/oscar/dashboard/catalogue/product_delete.html
@@ -14,7 +14,7 @@
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:catalogue-product-list' %}">{% trans "Products" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:catalogue-product' pk=product.pk %}">{{ product.get_title }}</a></li>
-            <li class="breadcrumb-item active">{{ title }}</li>
+            <li class="breadcrumb-item active" aria-current="page">{{ title }}</li>
         </ol>
     </nav>
 {% endblock %}
