--- a/src/oscar/templates/oscar/dashboard/offers/offer_delete.html
+++ b/src/oscar/templates/oscar/dashboard/offers/offer_delete.html
@@ -13,7 +13,7 @@
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:offer-list' %}">{% trans "Offers" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:offer-detail' pk=offer.pk %}">'{{ offer.name }}'</a></li>
-            <li class="breadcrumb-item active">{% trans "Delete?" %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Delete?" %}</li>
         </ol>
     </nav>
 {% endblock %}
