--- a/src/oscar/templates/oscar/dashboard/orders/order_detail.html
+++ b/src/oscar/templates/oscar/dashboard/orders/order_detail.html
@@ -13,7 +13,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:order-list' %}">{% trans "Orders" %}</a></li>
-            <li class="breadcrumb-item active">#{{ order.number }}</li>
+            <li class="breadcrumb-item active" aria-current="page">#{{ order.number }}</li>
         </ol>
     </nav>
 {% endblock %}
