--- a/src/oscar/templates/oscar/dashboard/orders/order_list.html
+++ b/src/oscar/templates/oscar/dashboard/orders/order_list.html
@@ -14,7 +14,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
-            <li class="breadcrumb-item active">{% trans "Orders" %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Orders" %}</li>
         </ol>
     </nav>
 {% endblock %}
