--- a/src/oscar/templates/oscar/dashboard/orders/statistics.html
+++ b/src/oscar/templates/oscar/dashboard/orders/statistics.html
@@ -14,7 +14,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:order-list' %}">{% trans "Orders" %}</a></li>
-            <li class="breadcrumb-item active">{% trans "Statistics" %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Statistics" %}</li>
         </ol>
     </nav>
 {% endblock %}
