--- a/src/oscar/templates/oscar/dashboard/pages/delete.html
+++ b/src/oscar/templates/oscar/dashboard/pages/delete.html
@@ -13,7 +13,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:page-list' %}">{% trans "Pages" %}</a></li>
-            <li class="breadcrumb-item active">
+            <li class="breadcrumb-item active" aria-current="page">
                 {% blocktrans with title=object.title %}Delete page '{{ title }}'?{% endblocktrans %}
             </li>
         </ol>
