--- a/src/oscar/templates/oscar/dashboard/partners/partner_delete.html
+++ b/src/oscar/templates/oscar/dashboard/partners/partner_delete.html
@@ -13,7 +13,7 @@
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:partner-list' %}">{% trans "Partners" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:partner-manage' pk=partner.pk %}">{{ partner.name }}</a></li>
-            <li class="breadcrumb-item active">{% trans "Delete?" %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Delete?" %}</li>
         </ol>
     </nav>
 {% endblock %}
