--- a/src/oscar/templates/oscar/dashboard/partners/partner_user_list.html
+++ b/src/oscar/templates/oscar/dashboard/partners/partner_user_list.html
@@ -10,7 +10,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:partner-list' %}">{% trans "Partners" %}</a></li>
-            <li class="breadcrumb-item active">{{ partner.name }}</li>
+            <li class="breadcrumb-item active" aria-current="page">{{ partner.name }}</li>
         </ol>
     </nav>
 {% endblock %}
