--- a/src/oscar/templates/oscar/dashboard/partners/partner_user_select.html
+++ b/src/oscar/templates/oscar/dashboard/partners/partner_user_select.html
@@ -12,7 +12,7 @@
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:partner-list' %}">{% trans "Partners" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:partner-manage' pk=partner.id %}">{{ partner.name }}</a></li>
-            <li class="breadcrumb-item active">{% trans "Link an existing user" %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Link an existing user" %}</li>
         </ol>
     </nav>
 {% endblock %}
