--- a/src/oscar/templates/oscar/dashboard/ranges/range_delete.html
+++ b/src/oscar/templates/oscar/dashboard/ranges/range_delete.html
@@ -13,7 +13,7 @@
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:range-list' %}">{% trans "Ranges" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:range-update' pk=range.pk %}">'{{ range.name }}'</a></li>
-            <li class="breadcrumb-item active">{% trans "Delete?" %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Delete?" %}</li>
         </ol>
     </nav>
 {% endblock %}
