--- a/src/oscar/templates/oscar/dashboard/ranges/range_list.html
+++ b/src/oscar/templates/oscar/dashboard/ranges/range_list.html
@@ -9,7 +9,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
-            <li class="breadcrumb-item active">{% trans "Ranges" %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Ranges" %}</li>
         </ol>
     </nav>
 {% endblock %}
