--- a/src/oscar/templates/oscar/dashboard/ranges/range_product_list.html
+++ b/src/oscar/templates/oscar/dashboard/ranges/range_product_list.html
@@ -17,7 +17,7 @@
             <li class="breadcrumb-item">
                 <a href="{% url 'dashboard:range-update' pk=range.id %}">'{{ range.name }}'</a>
             </li>
-            <li class="breadcrumb-item active">
+            <li class="breadcrumb-item active" aria-current="page">
                 {% trans "Products" %}
             </li>
         </ol>
