--- a/src/oscar/templates/oscar/dashboard/reviews/review_list.html
+++ b/src/oscar/templates/oscar/dashboard/reviews/review_list.html
@@ -12,7 +12,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
-            <li class="breadcrumb-item active">{% trans "Reviews" %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Reviews" %}</li>
         </ol>
     </nav>
 {% endblock %}
