--- a/src/oscar/templates/oscar/dashboard/reviews/review_update.html
+++ b/src/oscar/templates/oscar/dashboard/reviews/review_update.html
@@ -13,7 +13,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:reviews-list' %}">{% trans "Reviews" %}</a></li>
-            <li class="breadcrumb-item active">{% blocktrans %}Review #{{ review.id }}{% endblocktrans %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% blocktrans %}Review #{{ review.id }}{% endblocktrans %}</li>
         </ol>
     </nav>
 {% endblock %}
