--- a/src/oscar/templates/oscar/dashboard/shipping/weight_band_delete.html
+++ b/src/oscar/templates/oscar/dashboard/shipping/weight_band_delete.html
@@ -14,7 +14,7 @@
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:shipping-method-list' %}">{% trans "Shipping methods" %}</a></li>
             <li class="breadcrumb-item">{{ band.method.name }}</li>
-            <li class="breadcrumb-item active">{% trans "Delete weight band?" %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Delete weight band?" %}</li>
         </ol>
     </nav>
 {% endblock %}
