--- a/src/oscar/templates/oscar/dashboard/shipping/weight_based_detail.html
+++ b/src/oscar/templates/oscar/dashboard/shipping/weight_based_detail.html
@@ -11,7 +11,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:shipping-method-list' %}">{% trans "Shipping methods" %}</a></li>
-            <li class="breadcrumb-item active">{{ method.name }}</li>
+            <li class="breadcrumb-item active" aria-current="page">{{ method.name }}</li>
         </ol>
     </nav>
 {% endblock %}
