--- a/src/oscar/templates/oscar/dashboard/users/alerts/delete.html
+++ b/src/oscar/templates/oscar/dashboard/users/alerts/delete.html
@@ -13,7 +13,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:user-alert-list' %}">{% trans "Product alerts" %}</a></li>
-            <li class="breadcrumb-item active">{% blocktrans with id=alert.id %}Alert #{{ id }}{% endblocktrans %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% blocktrans with id=alert.id %}Alert #{{ id }}{% endblocktrans %}</li>
         </ol>
     </nav>
 {% endblock %}
