--- a/src/oscar/templates/oscar/dashboard/users/index.html
+++ b/src/oscar/templates/oscar/dashboard/users/index.html
@@ -19,7 +19,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
-            <li class="breadcrumb-item active">{% trans "Customers" %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Customers" %}</li>
         </ol>
     </nav>
 {% endblock %}
