--- a/src/oscar/templates/oscar/dashboard/vouchers/voucher_delete.html
+++ b/src/oscar/templates/oscar/dashboard/vouchers/voucher_delete.html
@@ -14,7 +14,7 @@
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:voucher-list' %}">{% trans "Vouchers" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:voucher-stats' pk=voucher.pk %}">{{ voucher }}</a></li>
-            <li class="breadcrumb-item active">{% trans "Delete?" %}</li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Delete?" %}</li>
         </ol>
     </nav>
 {% endblock %}
