--- a/src/oscar/templates/oscar/dashboard/vouchers/voucher_set_detail.html
+++ b/src/oscar/templates/oscar/dashboard/vouchers/voucher_set_detail.html
@@ -12,7 +12,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
             <li class="breadcrumb-item"><a href="{% url 'dashboard:voucher-set-list' %}">{% trans "Voucher sets" %}</a></li>
-            <li class="breadcrumb-item active">{{ description }}</li>
+            <li class="breadcrumb-item active" aria-current="page">{{ description }}</li>
         </ol>
     </nav>
 {% endblock %}
