--- a/src/oscar/templates/oscar/dashboard/vouchers/voucher_set_list.html
+++ b/src/oscar/templates/oscar/dashboard/vouchers/voucher_set_list.html
@@ -11,7 +11,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'dashboard:index' %}">{% trans "Dashboard" %}</a></li>
-            <li class="breadcrumb-item active">{{ description }}</li>
+            <li class="breadcrumb-item active" aria-current="page">{{ description }}</li>
         </ol>
     </nav>
 {% endblock %}
