--- a/src/oscar/templates/oscar/offer/list.html
+++ b/src/oscar/templates/oscar/offer/list.html
@@ -9,12 +9,14 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-<ul class="breadcrumb">
-    <li class="breadcrumb-item">
-        <a href="{{ homepage_url }}">{% trans "Home" %}</a>
-    </li>
-    <li class="breadcrumb-item active">{% trans "Offers" %}</li>
-</ul>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="{{ homepage_url }}">{% trans "Home" %}</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">{% trans "Offers" %}</li>
+        </ol>
+    </nav>
 {% endblock %}
 
 {% block headertext %}
