--- a/src/oscar/templates/oscar/offer/range.html
+++ b/src/oscar/templates/oscar/offer/range.html
@@ -9,12 +9,14 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-    <ul class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a href="{{ homepage_url }}">{% trans "Home" %}</a>
-        </li>
-        <li class="breadcrumb-item active">{{ range.name }}</li>
-    </ul>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="{{ homepage_url }}">{% trans "Home" %}</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">{{ range.name }}</li>
+        </ol>
+    </nav>
 {% endblock breadcrumbs %}
 
 {% block headertext %}{{ range.name }}{% endblock %}
