--- a/src/oscar/templates/oscar/dashboard/partials/form_field.html
+++ b/src/oscar/templates/oscar/dashboard/partials/form_field.html
@@ -6,7 +6,7 @@
 {% else %}
     {% comment %}
         Make the field widget type available to templates so we can mark-up
-        checkboxes differently to other widgets.
+        checkbox and radio inputs differently to other widgets.
     {% endcomment %}
     {% annotate_form_field field %}
 
@@ -16,24 +16,21 @@
             {% block label %}
                 {% if not nolabel and field.widget_type != 'CheckboxInput' %}
                     <label for="{{ field.auto_id }}" class="{% if style|default:"stacked" != 'stacked' %}col-sm-4{% endif %} col-form-label{% if field.field.required %} required{% endif %}">
-                        {{ field.label|safe }}
-                        {% if field.field.required %} <span>*</span>{% endif %}
+                        {{ field.label|safe }}{% if field.field.required %} <span>*</span>{% endif %}
                     </label>
                 {% endif %}
             {% endblock %}
 
             {% block controls %}
-                <div class="{% if style|default:"stacked" != 'stacked' %}col-sm-8{% endif %}{% if field.widget_type == 'CheckboxInput' %} checkbox{% endif %}">
+                <div class="{% if style|default:"stacked" != 'stacked' %}col-sm-8{% endif %}{% if field.widget_type == 'CheckboxInput' or field.widget_type == 'RadioSelect' %} form-check{% endif %}">
                     {% block widget %}
                         {% if field.widget_type == 'CheckboxInput' %}
-                            <label for="{{ field.auto_id }}" class="form-check mt-2 {% if field.field.required %}required{% endif %}">
-                                {% render_field field %}
+                            {% render_field field class+="form-check-input" %}
+                            <label for="{{ field.auto_id }}" class="form-check-label mt-2{% if field.field.required %} required{% endif %}">
                                 {{ field.label|safe }}{% if field.field.required %} <span>*</span>{% endif %}
                             </label>
                         {% elif field.widget_type == 'RadioSelect' %}
-                            <label for="{{ field.auto_id }}" class="controls mt-2 {% if field.field.required %}required{% endif %}">
-                            {% render_field field %}
-                            </label>
+                            {% render_field field class+="form-check-input position-static controls mt-2" %}
                         {% else %}
                             {% render_field field class+="form-control" %}
                         {% endif %}
