Rename Bootstrap "help-block" class to "form-text"

--- a/src/oscar/templates/oscar/dashboard/catalogue/product_update.html
+++ b/src/oscar/templates/oscar/dashboard/catalogue/product_update.html
@@ -199,7 +199,7 @@
                                                 {% include "oscar/dashboard/partials/product_images.html" with form=image_form %}
                                             {% endfor %}
                                         </ol>
-                                        <p class="help-block">
+                                        <p class="form-text">
                                             {% trans 'Drag images to re-order them. Space for additional images will appear when images are added.' %}
                                         </p>
                                     </div>
