--- a/src/oscar/templates/oscar/dashboard/reviews/review_update.html
+++ b/src/oscar/templates/oscar/dashboard/reviews/review_update.html
@@ -47,7 +47,7 @@
                                         </span>
                                     {% endfor %}
                                     {% if field.help_text %}
-                                        <span class='help-block'>
+                                        <span class='form-text'>
                                             {{ field.help_text }}
                                         </span>
                                     {% endif %}
