--- a/src/oscar/templates/oscar/partials/form_field.html
+++ b/src/oscar/templates/oscar/partials/form_field.html
@@ -42,7 +42,7 @@
 
                     {% block help_text %}
                         {% if field.help_text %}
-                            <span class='help-block'>
+                            <span class='form-text'>
                                 {# We allow HTML within form help fields #}
                                 {{ field.help_text|safe }}
                             </span>
