--- a/src/oscar/templates/oscar/checkout/gateway.html
+++ b/src/oscar/templates/oscar/checkout/gateway.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 
-    <form method="post" class="form-stacked card card-body bg-light">
+    <form method="post" class="card card-body bg-light">
         {% csrf_token %}
         {{ form.non_field_errors }}
 
