--- a/src/oscar/templates/oscar/customer/wishlists/wishlists_detail.html
+++ b/src/oscar/templates/oscar/customer/wishlists/wishlists_detail.html
@@ -24,7 +24,7 @@
 
 {% block tabcontent %}
     {% if form.total_form_count %}
-        <form class="stacked" method="post">
+        <form method="post">
             {{ form.management_form }}
             {% csrf_token %}
             <table class="table table-striped table-bordered">
