Make Bootstrap form groups in horizontal forms behave as grid rows

--- a/src/oscar/templates/oscar/catalogue/browse.html
+++ b/src/oscar/templates/oscar/catalogue/browse.html
@@ -81,7 +81,7 @@
             {% endif %}
             {% if form %}
                 <div class="float-right">
-                    {% include "oscar/partials/form_field.html" with field=form.sort_by %}
+                    {% include "oscar/partials/form_field.html" with field=form.sort_by style='horizontal' %}
                 </div>
             {% endif %}
         {% else %}
