--- a/src/oscar/templates/oscar/customer/profile/profile_delete.html
+++ b/src/oscar/templates/oscar/customer/profile/profile_delete.html
@@ -5,7 +5,7 @@
     <p>{% trans "Please confirm your password to delete your profile." %}</p>
     <form id="delete_profile_form" method="post" class="form-horizontal">
         {% csrf_token %}
-        {% include "oscar/partials/form_fields.html" %}
+        {% include "oscar/partials/form_fields.html" with style='horizontal' %}
         <div class="alert alert-warning">
             <h3>{% trans "Warning" %}</h3>
             {% blocktrans %}
