--- a/src/oscar/templates/oscar/dashboard/orders/shippingaddress_form.html
+++ b/src/oscar/templates/oscar/dashboard/orders/shippingaddress_form.html
@@ -26,7 +26,7 @@
 
     <form method="post" class="card card-body form-horizontal">
         {% csrf_token %}
-        {% include "oscar/dashboard/partials/form_fields.html" with form=form %}
+        {% include "oscar/dashboard/partials/form_fields.html" with form=form style='horizontal' %}
         <div class="form-actions">
             <button type="submit" class="btn btn-primary" data-loading-text="{% trans 'Updating...' %}">{% trans "Update address" %}</button>
             {% trans "or" %} <a href="{% url 'dashboard:order-detail' number=order.number %}">{% trans "cancel" %}</a>
