Rename Bootstrap "control-label" class to "col-form-label"

--- a/src/oscar/static_src/oscar/scss/page/forms.scss
+++ b/src/oscar/static_src/oscar/scss/page/forms.scss
@@ -27,7 +27,7 @@ form {
   margin-top: 6px;
 }
 
-.control-label.required:after {
+.col-form-label.required:after {
   color: $red;
   content: "*";
   display: inline-block;
