--- a/src/oscar/templates/oscar/dashboard/catalogue/option_form.html
+++ b/src/oscar/templates/oscar/dashboard/catalogue/option_form.html
@@ -36,7 +36,7 @@
 {% block headertext %}{{ title }}{% endblock %}
 
 {% block dashboard_content %}
-    <form class="form-stacked wysiwyg fixed-actions" method="post" data-behaviour="affix-nav-errors">
+    <form class="form-stacked wysiwyg fixed-actions" method="post" data-behaviour="tab-nav-errors">
         {% csrf_token %}
 
         <div class="row">
