--- a/src/oscar/templates/oscar/dashboard/offers/progress.html
+++ b/src/oscar/templates/oscar/dashboard/offers/progress.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div data-spy="affix" class="affix-top" data-offset-top="200">
+<div class="tab-nav sticky-top">
     <div class="table-header">
         <h3>{% trans "Steps" %}</h3>
     </div>
