--- a/src/oscar/templates/oscar/dashboard/catalogue/attribute_option_group_form.html
+++ b/src/oscar/templates/oscar/dashboard/catalogue/attribute_option_group_form.html
@@ -36,7 +36,7 @@
 {% block headertext %}{{ title }}{% endblock %}
 
 {% block dashboard_content %}
-    <form class="form-stacked wysiwyg fixed-actions" method="post" data-behaviour="affix-nav-errors">
+    <form class="form-stacked wysiwyg fixed-actions" method="post" data-behaviour="tab-nav-errors">
         {% csrf_token %}
 
         <div class="row">
@@ -45,7 +45,7 @@
 
             {% block tab_nav %}
                 <div class="col-md-3">
-                    <div data-spy="affix" class="affix-top" data-offset-top="200">
+                    <div class="tab-nav sticky-top">
                         <div class="table-header">
                             <h3>{% trans "Sections" %}</h3>
                         </div>
