Fix Bootstrap 4 carousel on catalogue-detail page
- "listbox" role is not appropriate and is no longer recommended for carousel
- horizonal centering of image is already handled in "oscar/scss/page/plugins.scss"
- Bootstrap has native (SVG) carousel-control icons
- ".item" has been renamed to ".carousel-item"

--- a/src/oscar/static_src/oscar/scss/page/plugins.scss
+++ b/src/oscar/static_src/oscar/scss/page/plugins.scss
@@ -32,21 +32,21 @@
 }
 
 // Center the carousel image
-.carousel-inner > .item > img,
-.carousel-inner > .item > a > img {
+.carousel-inner > .carousel-item > img,
+.carousel-inner > .carousel-item > a > img {
   margin: 0 auto;
 }
 
 // Multiple image gallery carousel over-rides
 #product_gallery {
-  .carousel-inner > .item {
+  .carousel-inner > .carousel-item {
     height: 400px;
     line-height: 400px;
     vertical-align: middle;
     text-align: center;
   }
 
-  .carousel-inner > .item > img {
+  .carousel-inner > .carousel-item > img {
     display: inline-block;
     vertical-align: middle;
     max-height: 400px;
