Improve voucher creation in dashboard
- allow creation of offers of all types
- allow creation of vouchers with multiple offers
- allow creation of voucher sets of all usages, and with multiple offers

--- a/src/oscar/templates/oscar/dashboard/index.html
+++ b/src/oscar/templates/oscar/dashboard/index.html
@@ -166,6 +166,18 @@
                 <td class="col-md-2" >{{ total_site_offers }}</td>
             </tr>
             <tr>
+                <th class="col-md-10">{% trans "Active <em>Voucher</em> Offers" %}</th>
+                <td class="col-md-2" >{{ total_voucher_offers }}</td>
+            </tr>
+            <tr>
+                <th class="col-md-10">{% trans "Active <em>User</em> Offers" %}</th>
+                <td class="col-md-2" >{{ total_user_offers }}</td>
+            </tr>
+            <tr>
+                <th class="col-md-10">{% trans "Active <em>Session</em> Offers" %}</th>
+                <td class="col-md-2" >{{ total_session_offers }}</td>
+            </tr>
+            <tr>
                 <th class="col-md-10">{% trans "Active <em>Vouchers</em>" %}</th>
                 <td class="col-md-2" >{{ total_vouchers }}</td>
             </tr>
