--- a/src/oscar/templates/oscar/dashboard/offers/offer_list.html
+++ b/src/oscar/templates/oscar/dashboard/offers/offer_list.html
@@ -44,6 +44,10 @@
             {% if offers %}
                 <tr>
                     <th>{% anchor 'name' _('Offer name') %}</th>
+                    <th>{% anchor 'offer_type' _('Offer type') %}</th>
+                    {% if form.is_bound %}{% if form.is_voucher_offer_type or not form.cleaned_data.offer_type %}
+                    <th>{% trans "Num of vouchers" %}</th>
+                    {% endif %}{% endif %}
                     <th>{% anchor 'start_datetime' _('Start date') %}</th>
                     <th>{% anchor 'end_datetime' _('End date') %}</th>
                     <th>{% trans "Priority" %}</th>
@@ -58,6 +62,10 @@
                 {% for offer in offers %}
                     <tr>
                         <td><a href="{% url 'dashboard:offer-detail' pk=offer.pk %}">{{ offer.name }}</a></td>
+                        <td>{{ offer.offer_type }}</td>
+                        {% if form.is_bound %}{% if form.is_voucher_offer_type or not form.cleaned_data.offer_type %}
+                        <td>{{ offer.vouchers.count }}</td>
+                        {% endif %}{% endif %}
                         <td>{{ offer.start_datetime|default:"-" }}</td>
                         <td>{{ offer.end_datetime|default:"-" }}</td>
                         <td>{{ offer.priority }}</td>
@@ -95,12 +103,16 @@
                                         <a class="dropdown-item" href="{% url 'dashboard:offer-detail' pk=offer.pk %}">
                                             {% trans "Stats" %}
                                         </a>
+                                        {% if not offer.is_voucher_offer_type %}
                                         <a class="dropdown-item" href="{% url 'dashboard:offer-metadata' pk=offer.pk %}">
                                             {% trans "Edit" %}
                                         </a>
+                                        {% endif %}
+                                        {% if not offer.vouchers.exists %}
                                         <a class="dropdown-item" href="{% url 'dashboard:offer-delete' pk=offer.pk %}">
                                             {% trans "Delete" %}
                                         </a>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
