--- a/src/oscar/templates/oscar/dashboard/vouchers/voucher_detail.html
+++ b/src/oscar/templates/oscar/dashboard/vouchers/voucher_detail.html
@@ -25,16 +25,7 @@
     <div class="table-header">
         <h2>{% trans "Voucher details" %}</h2>
     </div>
-    <table class="table table-striped table-bordered table-hover">
-        <tbody>
-            <tr><th>{% trans "Name" %}</th><td>{{ voucher.name }}</td></tr>
-            <tr><th>{% trans "Code" %}</th><td>{{ voucher.code }}</td></tr>
-            <tr><th>{% trans "Start datetime" %}</th><td>{{ voucher.start_datetime }}</td></tr>
-            <tr><th>{% trans "End datetime" %}</th><td>{{ voucher.end_datetime }}</td></tr>
-            <tr><th>{% trans "Usage" %}</th><td>{{ voucher.get_usage_display }}</td></tr>
-            <tr><th>{% trans "Discount" %}</th><td>{{ voucher.benefit.description|safe }}</td></tr>
-        </tbody>
-    </table>
+    {% include "oscar/dashboard/vouchers/partials/voucher_details_table.html" %}
 
     <div class="table-header">
         <h2>{% trans "Voucher performance" %}</h2>
@@ -79,9 +70,19 @@
     </table>
 
     <div class="form-actions">
+        {% if not voucher.voucher_set %}
         <a class="btn btn-primary" href="{% url 'dashboard:voucher-update' pk=voucher.id %}">{% trans "Edit" %}</a> {% trans "or" %}
-        <a class="btn btn-danger" href="{% url 'dashboard:voucher-delete' pk=voucher.id %}">{% trans "Delete" %}</a> {% trans "or" %}
-        <a href="{% url 'dashboard:voucher-list' %}">{% trans "cancel" %}</a>
+        {% else %}
+        <a class="btn btn-primary" href="{% url 'dashboard:voucher-set-update' pk=voucher.voucher_set.pk %}">{% trans "Edit set" %}</a> {% trans "or" %}
+        {% endif %}
+        <a class="btn btn-danger" href="{% url 'dashboard:voucher-delete' pk=voucher.id %}">
+        {% if not voucher.voucher_set %}
+        {% trans "Delete" %}
+        {% else %}
+        {% trans "Delete from set" %}
+        {% endif %}
+        </a> {% trans "or" %}
+        <a href="{% if not voucher.voucher_set %}{% url 'dashboard:voucher-list' %}{% else %}{% url 'dashboard:voucher-set-detail' pk=voucher.voucher_set.pk %}{% endif %}">{% trans "cancel" %}</a>
     </div>
 
 {% endblock dashboard_content %}
