--- a/src/oscar/templates/oscar/dashboard/vouchers/voucher_list.html
+++ b/src/oscar/templates/oscar/dashboard/vouchers/voucher_list.html
@@ -47,6 +47,9 @@
             {% if vouchers %}
                 {% block table_head %}
                     <tr>
+                        {% if form.is_bound and form.cleaned_data.in_set is not False %}
+                        <th>{% trans "Voucher set" %}</th>
+                        {% endif %}
                         <th>{% trans "Name" %}</th>
                         <th>{% trans "Code" %}</th>
                         <th>{% trans "Status" %}</th>
@@ -59,6 +62,15 @@
                 {% for voucher in vouchers %}
                     {% block table_row %}
                         <tr>
+                            {% if form.is_bound and form.cleaned_data.in_set is not False %}
+                            <td>
+                                {% if voucher.voucher_set.pk %}
+                                <a href="{% url 'dashboard:voucher-set-detail' pk=voucher.voucher_set.pk %}">{{ voucher.voucher_set.name }}</a>
+                                {% else %}
+                                -
+                                {% endif %}
+                            </td>
+                            {% endif %}
                             <td><a href="{% url 'dashboard:voucher-stats' voucher.id %}">{{ voucher.name }}</a></td>
                             <td>
                                 <span class="badge badge-secondary">{{ voucher.code }}</span>
@@ -84,11 +96,21 @@
                                                 <a class="dropdown-item" href="{% url 'dashboard:voucher-stats' pk=voucher.id %}">
                                                     {% trans "Stats" %}
                                                 </a>
+                                                {% if not voucher.voucher_set %}
                                                 <a class="dropdown-item" href="{% url 'dashboard:voucher-update' pk=voucher.id %}">
                                                     {% trans "Edit" %}
                                                 </a>
+                                                {% else %}
+                                                <a class="dropdown-item" href="{% url 'dashboard:voucher-set-update' pk=voucher.voucher_set.pk %}">
+                                                    {% trans "Edit set" %}
+                                                </a>
+                                                {% endif %}
                                                 <a class="dropdown-item" href="{% url 'dashboard:voucher-delete' pk=voucher.id %}">
+                                                    {% if not voucher.voucher_set %}
                                                     {% trans "Delete" %}
+                                                    {% else %}
+                                                    {% trans "Delete from set" %}
+                                                    {% endif %}
                                                 </a>
                                             </div>
                                         </div>
