--- a/src/oscar/templates/oscar/dashboard/vouchers/voucher_set_detail.html
+++ b/src/oscar/templates/oscar/dashboard/vouchers/voucher_set_detail.html
@@ -20,11 +20,8 @@
 {% block header %}
 <div class="page-header">
     <div class="float-right">
-        <a href="{% url 'dashboard:voucher-set-update' pk=voucher_set.pk %}" class="btn btn-primary">
-            <i class="fas fa-plus-circle"></i> {% trans "Update voucher set" %}
-        </a>
         <a href="{% url 'dashboard:voucher-set-download' pk=voucher_set.pk %}" class="btn btn-primary">
-            <i class="fas fa-plus-circle"></i> {% trans "Download CSV" %}
+            <i class="fas fa-download"></i> {% trans "Download CSV" %}
         </a>
     </div>
     <h1>{% trans "Voucher set" %} '{{ voucher_set.name }}'</h1>
@@ -33,39 +30,7 @@
 
 
 {% block dashboard_content %}
-<table class="table table-striped table-bordered">
-    <caption>
-        <h3>
-            {% trans "Voucher set" %}
-        </h3>
-    </caption>
-    <tbody>
-        <tr>
-            <th>{% trans "Title" %}</th>
-            <td>{{ voucher_set.name }}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Start" %}</th>
-            <td>{{ voucher_set.start_datetime }}</td>
-        </tr>
-        <tr>
-            <th>{% trans "End" %}</th>
-            <td>{{ voucher_set.end_datetime }}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Description" %}</th>
-            <td>{{ voucher_set.description }}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Number of vouchers" %}</th>
-            <td>{{ voucher_set.count }}</td>
-        </tr>
-        <tr>
-            <th>{% trans "Created" %}</th>
-            <td>{{ voucher_set.date_created }}</td>
-        </tr>
-    </tbody>
-</table>
+{% include "oscar/dashboard/vouchers/partials/voucher_set_details_table.html" %}
 
 <div class="table-header">
     <h3><i class="fas fa-search"></i> {% trans "Search" %}</h3>
@@ -73,8 +38,8 @@
 <div class="card card-body">
     <form method="get" class="form-inline">
 		{% include 'oscar/partials/form_fields_inline.html' with form=form %}
-		<button type="submit" class="btn btn-primary">{% trans "Search" %}</button>
-		<a href="{% url 'dashboard:voucher-list' %}" class="btn">{% trans "Reset" %}</a>
+		<button type="submit" class="btn btn-primary mb-2">{% trans "Search" %}</button>
+		<a href="{% url 'dashboard:voucher-set-detail' pk=voucher_set.pk %}" class="btn mb-2">{% trans "Reset" %}</a>
     </form>
 </div>
 
@@ -85,7 +50,6 @@
     {% if vouchers %}
     <tr>
         <th>{% trans "Code" %}</th>
-        <th>{% trans "Status" %}</th>
         <th>{% anchor 'num_basket_additions' _("Num baskets") %}</th>
         <th>{% anchor 'num_orders' _("Num orders") %}</th>
         <th>{% anchor 'date_created' _("Date created") %}</th>
@@ -95,13 +59,6 @@
         <tr>
             <td>
                 <span class="badge badge-secondary">{{ voucher.code }}</span>
-            </td>
-            <td>
-                {% if voucher.is_active %}
-                    <span class="badge badge-success">{% trans "Active" %}</span>
-                {% else %}
-                    <span class="badge badge-danger">{% trans "Inactive" %}</span>
-                {% endif %}
             </td>
             <td>{{ voucher.num_basket_additions }}</td>
             <td>{{ voucher.num_orders }}</td>
@@ -130,4 +87,10 @@
     {% endif %}
 </table>
 {% include "oscar/partials/pagination.html" %}
+
+<div class="form-actions">
+    <a class="btn btn-primary" href="{% url 'dashboard:voucher-set-update' pk=voucher_set.pk %}">{% trans "Edit" %}</a> {% trans "or" %}
+    <a class="btn btn-danger" href="{% url 'dashboard:voucher-set-delete' pk=voucher_set.pk %}">{% trans "Delete" %}</a> {% trans "or" %}
+    <a href="{% url 'dashboard:voucher-set-list' %}">{% trans "cancel" %}</a>
+</div>
 {% endblock dashboard_content %}
